subdir('i_command')
subdir('add_edge_cmd')
subdir('add_vertex_cmd')
subdir('remove_edge_cmd')
subdir('remove_vertex_cmd')
subdir('visualize_cmd')
subdir('dijkstra_cmd')

command_deps = declare_dependency(
    dependencies : [
        i_command_dep,
        add_edge_dep,
        add_vert_dep,
        remove_edge_dep,
        remove_vert_dep,
        visualize_dep,
        dijkstra_dep
    ]
)